wasmtime-go/target/x86_64-unknown-linux-gnu/release/build/system-interface-82ff2bd0b346944b/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(can_vector)]
  | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(clamp)]
  | ^^^^^^^^^^^^^^^^^^

warning: the feature `clamp` has been stable since 1.50.0 and no longer requires an attribute to enable
 --> <anon>:1:12
  |
1 | #![feature(clamp)]
  |            ^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(extend_one)]
  | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(io_error_more)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(pattern)]
  | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(seek_stream_len)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(shrink_to)]
  | ^^^^^^^^^^^^^^^^^^^^^^

warning: the feature `shrink_to` has been stable since 1.56.0 and no longer requires an attribute to enable
 --> <anon>:1:12
  |
1 | #![feature(shrink_to)]
  |            ^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(toowned_clone_into)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: the feature `toowned_clone_into` has been stable since 1.63.0 and no longer requires an attribute to enable
 --> <anon>:1:12
  |
1 | #![feature(toowned_clone_into)]
  |            ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(try_reserve)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^

warning: the feature `try_reserve` has been stable since 1.57.0 and no longer requires an attribute to enable
 --> <anon>:1:12
  |
1 | #![feature(try_reserve)]
  |            ^^^^^^^^^^^
  |
  = note: `#[warn(stable_features)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(unix_socket_peek)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(windows_by_handle)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0635]: unknown feature `windows_by_handle`
 --> <anon>:1:12
  |
1 | #![feature(windows_by_handle)]
  |            ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0554, E0635.
For more information about an error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(write_all_vectored)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:1
  |
1 | #![feature(windows_file_type_ext)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0635]: unknown feature `windows_file_type_ext`
 --> <anon>:1:12
  |
1 | #![feature(windows_file_type_ext)]
  |            ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0554, E0635.
For more information about an error, try `rustc --explain E0554`.
